--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "prod": "npm run build && npm run start"
   },
   "dependencies": {
+    "axios": "^1.6.8",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.0.28",
     "next": "14.2.1",
+    "node-cache": "^5.1.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
