[TASK] add contact form

--- a/.env
+++ b/.env
@@ -1,5 +1,16 @@
 PROJECT_NAME="SchlentherDev_Local"
 PROJECT_BASE_URL="schlenther.localhost"
 
+# eRecht24 Keys
 ER24_API_KEY=""
 ER24_PLUGIN_KEY=""
+
+# Mail Config
+MAIL_HOST="mail.example.com"
+MAIL_PORT=465
+
+MAIL_USERNAME="hello@example.com"
+MAIL_PASSWORD=""
+
+MAIL_FROM_NAME="John Doe"
+MAIL_FROM_ADDRESS="hello@example.com"
