--- a/package.json
+++ b/package.json
@@ -10,16 +10,22 @@
     "prod": "npm run build && npm run start"
   },
   "dependencies": {
+    "@types/nodemailer": "^6.4.14",
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.0.28",
+    "fs": "^0.0.1-security",
     "next": "14.2.1",
     "node-cache": "^5.1.2",
-    "react": "^18",
+    "nodemailer": "^6.9.13",
+    "react": "^18.2.0",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-spring": "^9.7.3",
     "react-tippy": "^1.4.0",
-    "sass": "^1.75.0"
+    "remove": "^0.1.5",
+    "sass": "^1.75.0",
+    "spring": "^0.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
