--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,18 @@
 {
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:base"
-  ]
+  "assignees": ["iven.s"],     
+  "baseBranches": ["master"],
+  "gitlabci-include": {
+      "enabled": false
+  },
+  "groupName": "all",
+  "commitMessagePrefix": "[TASK]",
+  "prBodyNotes": [
+    "# Update dependencies",
+    "1. Clone project",
+    "2. Checkout update branch",
+    "3. run `npm install` and test everything",
+    "4. If everything is fine and fixes are pushed, merge the MR"
+  ],
+  "addLabels": ["priority - p1", "type - security"]
 }
+
