--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.7"
-
 services:
   # TYPESCRIPT
   typescript:
@@ -10,3 +8,20 @@ services:
     restart: always
     ports:
       - "3000:3000"
+    labels:
+      - "traefik.enable=true"
+
+      # HTTPS
+      - "traefik.http.routers.${PROJECT_NAME}_typescript.rule=Host(`${PROJECT_BASE_URL}`)"
+      - "traefik.http.services.${PROJECT_NAME}_typescript.loadbalancer.server.port=3000"
+
+  # TRAEFIK (locale reverse proxy)
+  traefik:
+    image: traefik:v3.0
+    container_name: "${PROJECT_NAME}_traefik"
+    command: --api.insecure=true --providers.docker
+    ports:
+      - '80:80'
+      - '8080:8080' # Dashboard
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
