--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-tippy": "^1.4.0",
     "remove": "^0.1.5",
     "sass": "^1.75.0",
+    "sharp": "^0.33.3",
     "spring": "^0.0.0"
   },
   "devDependencies": {
