[TASK] create new setup for docker compose standalone with ssl

--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
 PROJECT_NAME="SchlentherDev_Local"
 PROJECT_BASE_URL="schlenther.localhost"
 
+# The email adress, which is used to recieve an letsencrypt SSL certificate
+LETSENCRYPT_EMAIL="abuse@lvckyworld.net"
+
 # eRecht24 Keys
 ER24_API_KEY=""
 ER24_PLUGIN_KEY=""
